:recycle: refactor: Adding props on Post component

--- a/src/components/Comment.module.css
+++ b/src/components/Comment.module.css
@@ -4,11 +4,11 @@
     gap: 1rem;
 }
 
-.comment > img {
+/* .comment > img {
     width: 3rem;
     height: 3rem;
     border-radius: 8px;
-}
+} */
 
 .commentBox {
     flex: 1;
